--- a/arch/arm/configs/msm8916_sec_defconfig
+++ b/arch/arm/configs/msm8916_sec_defconfig
@@ -43,6 +43,7 @@ CONFIG_OPROFILE=y
 CONFIG_KPROBES=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_PROCESS_RECLAIM=y
+CONFIG_PROC_DEVICETREE=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
